// Techleap Ecosystem Data Warehouse - Star Schema
// Paste this at https://dbdiagram.io to generate visual ERD
// Docs: https://dbml.dbdiagram.io/docs
//
// Design Philosophy: "Simple But Not Simplistic"
// - 4 core tables instead of 7+
// - JSON arrays for industries/investors (vs bridge tables)
// - SCD Type 2 only on dim_company (where history matters)

Table dim_company {
  company_sk bigint [primary key, note: 'Surrogate key']
  company_id varchar [not null, unique, note: 'Natural key from Dealroom']
  name varchar [not null]
  founding_date date
  employee_count integer
  total_funding_eur decimal [note: 'Total funding in EUR']
  city varchar
  country varchar
  industries varchar [note: 'JSON array: ["logistics", "ai"]']
  valid_from timestamp [not null, note: 'SCD Type 2 - row effective date']
  valid_to timestamp [note: 'SCD Type 2 - row expiry date (NULL = current)']
  is_current boolean [not null, default: true, note: 'SCD Type 2 - active row flag']
}

Table dim_date {
  date_sk integer [primary key, note: 'YYYYMMDD format (e.g., 20240115)']
  full_date date [unique, not null]
  year integer [not null]
  quarter integer [not null]
  month integer [not null]
  month_name varchar
  is_weekend boolean
}

Table fact_funding_rounds {
  funding_round_sk bigint [primary key, note: 'Surrogate key']
  company_sk bigint [not null]
  date_sk integer [not null]
  round_type varchar [not null, note: 'seed, series-a, series-b, etc.']
  amount_eur decimal
  investors varchar [note: 'JSON array: [{"name": "Peak Capital", "type": "vc", "lead": true}]']
}

// Extension tables (future additions)

Table fact_patents {
  patent_sk bigint [primary key]
  company_sk bigint
  filing_date_sk integer
  patent_number varchar [not null]
  patent_office varchar [note: 'EPO, USPTO, WIPO, etc.']
  classification varchar [note: 'IPC classification code']
}

Table fact_news_mentions {
  mention_sk bigint [primary key]
  company_sk bigint
  mention_date_sk integer
  source_name varchar [not null, note: 'techcrunch, reuters, etc.']
  sentiment_score decimal [note: '-1.0 to +1.0']
}

// Relationships

// Core relationships
Ref funding_company: fact_funding_rounds.company_sk > dim_company.company_sk // many-to-one
Ref funding_date: fact_funding_rounds.date_sk > dim_date.date_sk // many-to-one

// Extension relationships (future)
Ref patent_company: fact_patents.company_sk > dim_company.company_sk
Ref patent_date: fact_patents.filing_date_sk > dim_date.date_sk

Ref news_company: fact_news_mentions.company_sk > dim_company.company_sk
Ref news_date: fact_news_mentions.mention_date_sk > dim_date.date_sk
